--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,9 @@
-<h1>hello</h1>
+<h1>Objective Links</h1>
+
+<a href="a.html"><button>Objective A</button></a>
+<a href="b.html"><button>Objective B</button></a>
+<a href="c.html"><button>Objective C</button></a>
+<a href="d.html"><button>Objective D</button></a>
+<a href="e.html"><button>Objective E</button></a>
+
+<a href="index.html"><button>Index</button></a>
