Finished second objective

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -42,3 +42,13 @@ body {
   margin: 20px;
   padding: 7px;
 }
+
+.aBlogPost {
+  margin: 20px;
+}
+
+.personFormInput {
+  display: block;
+  margin: 20px;
+  padding: 3px;
+}
