--- a/app/templates/d/d-index.hbs
+++ b/app/templates/d/d-index.hbs
@@ -1,1 +1,4 @@
 <h1>Page D</h1>
+<div class="d-create-url"></div>
+<div class="d-url-list-container"></div>
+<div class="d-tag-list-container"></div>
