Made progress on Objective 5. Can remove blogs from the DOM but they aren't being removed from the server. No luck on the edit function

--- a/app/templates/e/e-index.hbs
+++ b/app/templates/e/e-index.hbs
@@ -1,1 +1,7 @@
-<h1>Page E</h1>
+<div class="header"><h1>Aaron's Blog Stuff</h1></div>
+<div class="sidebar">
+<div class="createPost">
+</div>
+</div>
+
+<div class="blogPosts"></div>
