--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -114,3 +114,52 @@ body {
   margin: 0 10px;
   background: $light-gray;
 }
+
+.sidebar {
+  width: 35%;
+  float: left;
+}
+
+.blogPosts {
+  width: 60%;
+  margin: 0;
+  padding: 0;
+  min-height: 400px;
+  float: right;
+  background: $light-gray;
+}
+
+.header {
+  text-align: center;
+  background: white;
+  padding: 20px;
+}
+
+.header h1 {
+  margin: 0;
+}
+
+.e-blog-title {
+  float: left;
+  display: inline-block;
+  max-width: 60%;
+}
+
+.blogPosts {
+  margin: 0;
+  padding: 20px;
+}
+
+.blogPosts ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.blogListItemHeader {
+  @include clearfix;
+}
+
+.delete {
+  float: right;
+}
