--- a/app/templates/a/a-index.hbs
+++ b/app/templates/a/a-index.hbs
@@ -1,1 +1,3 @@
-<h1 class="aBlogPost">Create a Blog Post</h1>
+<h1 class="aBlogTitleTitle">Create a Blog Post</h1>
+<h4><a href="/">Home</a></h4>
+<h4>Results will be console logged and posted to http://tiny-lasagna-server.herokuapp.com/collections/aaronblogposts</h4>
