--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,7 @@
 <h1>Objective Links</h1>
 
-<a href="a.html"><button>Objective A</button></a>
-<a href="b.html"><button>Objective B</button></a>
-<a href="c.html"><button>Objective C</button></a>
-<a href="d.html"><button>Objective D</button></a>
-<a href="e.html"><button>Objective E</button></a>
-
-<a href="index.html"><button>Index</button></a>
+<a href="a.html" class="index-link"><button class="index-button">Objective A <br> (Create a blog post)</button></a>
+<a href="b.html" class="index-link"><button class="index-button">Objective B <br> (Create a contact)</button></a>
+<a href="c.html" class="index-link"><button class="index-button">Objective C <br> (View a blog post)</button></a>
+<a href="d.html" class="index-link"><button class="index-button">Objective D <br> (Create something)</button></a>
+<a href="e.html" class="index-link"><button class="index-button">Objective E <br> (Create something)</button></a>
