--- a/app/templates/c/c-index.hbs
+++ b/app/templates/c/c-index.hbs
@@ -1,8 +1,10 @@
 <div class="c-blog-posts">
-<h1>Page C</h1>
+<h1>Read a Blog</h1>
+<h4><a href="/">Home</a></h4>
+<h4>Click on a blog title and the full blog will appear on the right. Blogs are a Backbone Collection created with Objective A</h4>
 <div id="c-blog-posts-list"></div>
 </div>
 
 <div class="current-post">
-  
+
 </div>
