--- a/app/templates/b/b-index.hbs
+++ b/app/templates/b/b-index.hbs
@@ -1,1 +1,3 @@
-<h1>Page B</h1>
+<h1>Create A Contact</h1>
+<h4><a href="/">Home</a></h4>
+<h4>Results will be console logged and posted to http://tiny-lasagna-server.herokuapp.com/collections/aaronblogposts</h4>
