--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,4 +4,4 @@
 <a href="b.html" class="index-link"><button class="index-button">Objective B <br> (Create a contact)</button></a>
 <a href="c.html" class="index-link"><button class="index-button">Objective C <br> (View a blog post)</button></a>
 <a href="d.html" class="index-link"><button class="index-button">Objective D <br> (Create something)</button></a>
-<a href="e.html" class="index-link"><button class="index-button">Objective E <br> (Create something)</button></a>
+<a href="e.html" class="index-link"><button class="index-button">Objective E <br> (Create, view, and delete blog posts)</button></a>
