--- a/app/templates/e/e-index.hbs
+++ b/app/templates/e/e-index.hbs
@@ -1,4 +1,7 @@
-<div class="header"><h1>Aaron's Blog Stuff</h1></div>
+<div class="header"><h1>Aaron's Blog Stuff</h1>
+  <h4><a href="/">Home</a></h4>
+  <h4>Create a blog post and it appears on the right</h4>
+</div>
 <div class="sidebar">
 <div class="createPost">
 </div>
